--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <img src="img/thandi.jpg" class="img-thumbnail rounded-circle" width="90"/>
             <img src="img/sally.jpg" class="img-thumbnail rounded-circle" width="90"/>
             <img src="img/john.jpg" class="img-thumbnail rounded-circle" width="90"/>
-            <img src="img/Bob.jpg" class="img-thumbnail rounded-circle" width="90"/>
-            <img src="img/Lee.jpg" class="img-thumbnail rounded-circle" width="90"/>
-            <img src="img/Jane.jpg" class="img-thumbnail rounded-circle" width="90"/>
-            <img src="img/Andile.jpg" class="img-thumbnail rounded-circle" width="90"/>
-            <img src="img/Lungi.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/bob.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/lee.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/jane.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/andile.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/lungi.jpg" class="img-thumbnail rounded-circle" width="90"/>
         </div>
 
         <div class="row container mx-auto">
